name:                csi-init
version:             0.1.0.0
synopsis:            Invokes the `csi` C# REPL preloaded with a bunch of assemblies
description:         Invokes the `csi` C# REPL preloaded with a bunch of assemblies
homepage:            https://github.com/dcastro/csi-init
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          dc@diogocastro.com
copyright:           2016 Diogo Castro
category:            console
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable csi-init
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N  -Wincomplete-patterns
  build-depends:       base
                     , filepath
                     , process
                     , optparse-applicative
                     , newtype-generics
                     , filemanip
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dcastro/csi-init
